--- a/contrib/vscode-cds/webviews/workflow-preview/package.json
+++ b/contrib/vscode-cds/webviews/workflow-preview/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "16.2.12",
     "@angular/platform-browser-dynamic": "16.2.12",
     "@angular/router": "16.2.12",
+    "@ctrl/tinycolor": "3.6.1",
     "d3": "7.8.5",
     "d3-zoom": "3.0.0",
     "dagre-d3": "0.6.4",
