fix(api): init plugin list before workflow template check

--- a/tests/08_v2_workflow_template.yml
+++ b/tests/08_v2_workflow_template.yml
@@ -74,6 +74,7 @@ testcases:
                 model: "{{.worker_model}}"
                 memory: "512"
               steps:
+              - uses: actions/checkout
               - run: |-
                   #!/bin/bash
                   env
