fix(api): load plugins for job template jobs check

--- a/tests/08_v2_workflow_job_template_with_stage.yml
+++ b/tests/08_v2_workflow_job_template_with_stage.yml
@@ -72,7 +72,7 @@ testcases:
               stage: stage-[[.params.region]]
               runs-on: "{{.worker_model}}"
               steps:
-              - run: echo "Inside test_1"    
+              - uses: actions/checkout
             job2_[[.params.region]]:
               stage: stage-[[.params.region]]
               runs-on: "{{.worker_model}}"
