--- a/tests/08_v2_workflow_on_pullrequest.yml
+++ b/tests/08_v2_workflow_on_pullrequest.yml
@@ -189,7 +189,7 @@ testcases:
       - result.statuscode ShouldEqual 200
       - result.bodyjson.statuses ShouldHaveLength 1
       - result.bodyjson.statuses.statuses0.status ShouldEqual "success"
-      - "result.bodyjson.statuses.statuses0.context ShouldEqual \"ITV2WFNOTIF-WorkflowNotificationsLog #1\""
+      - "result.bodyjson.statuses.statuses0.context ShouldEqual \"ITV2WFNOTIF-WorkflowNotificationsLog\""
     retry: 10
     delay: 1
 
