feat(api): workflow v2 initiator
Signed-off-by: francois.samin <francois.samin@corp.ovh.com>

--- a/tests/08_v2_env_context.yml
+++ b/tests/08_v2_env_context.yml
@@ -13,6 +13,17 @@ testcases:
           from: result.systemoutjson.username
     - name: "Display username"
       info: "Connected CDS user is {{.cdsUser}}"
+
+    - type: v2_install_gpg_key
+      cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
+      gpg_key_id: "{{.gpg.key_id}}"
+      git_host: "{{.git.host}}"
+      git_user: "{{.git.user}}"
+      git_password: "{{.git.password}}"
+      vars:
+        emailaddress:
+          from: result.emailaddress
+
     - type: v2_create_project
       cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
       cds_project: "{{.cds_project}}"
@@ -20,7 +31,7 @@ testcases:
       git_user: "{{.git.user}}"
       git_password: "{{.git.password}}"
       cds_region: "{{.cds.region}}"
-      git_emailAddress: "{{.git.email}}"
+      git_emailAddress: "{{.emailaddress}}"
 
     - type: v2_add_git_repo
       cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
@@ -37,15 +48,7 @@ testcases:
     - name: Create variable set item secret multiline line
       script: "{{.cdsctl}} -f {{.cdsctl.config}} X project variableset item add {{.cds_project}} varset1 myMultilineSecret \"secretMultiline1 \n secretMultiline2\" secret" 
 
-    - type: v2_install_gpg_key
-      cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
-      gpg_key_id: "{{.gpg.key_id}}"
-      git_host: "{{.git.host}}"
-      git_user: "{{.git.user}}"
-      git_password: "{{.git.password}}"
-      vars:
-        emailaddress:
-          from: result.emailaddress
+
       
 - name: Push workflow file
   steps:
