--- a/tests/08_v2_hook_workflow_run_distant_workflow.yml
+++ b/tests/08_v2_hook_workflow_run_distant_workflow.yml
@@ -18,6 +18,16 @@ testcases:
           from: result.systemoutjson.username
     - name: "Display username"
       info: "Connected CDS user is {{.cdsUser}}"
+    - type: v2_install_gpg_key
+      cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
+      gpg_key_id: "{{.gpg.key_id}}"
+      git_host: "{{.git.host}}"
+      git_user: "{{.git.user}}"
+      git_password: "{{.git.password}}"
+      vars:
+        emailaddress:
+          from: result.emailaddress
+
     - type: v2_create_project
       cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
       cds_project: "{{.cds_project}}"
@@ -25,7 +35,7 @@ testcases:
       git_user: "{{.git.user}}"
       git_password: "{{.git.password}}"
       cds_region: "{{.cds.region}}"
-      git_emailAddress: "{{.git.email}}"
+      git_emailAddress: "{{.emailaddress}}"
 
     - type: v2_add_git_repo
       cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
@@ -53,16 +63,6 @@ testcases:
       git_user: "{{.git.user}}"
       git_password: "{{.git.password}}"
       git_repo: "{{.git_repo_tocheckout}}"  
-
-    - type: v2_install_gpg_key
-      cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
-      gpg_key_id: "{{.gpg.key_id}}"
-      git_host: "{{.git.host}}"
-      git_user: "{{.git.user}}"
-      git_password: "{{.git.password}}"
-      vars:
-        emailaddress:
-          from: result.emailaddress
 
 - name: PushFilesOnRepoToCheckout
   steps:
