--- a/ui/angular.json
+++ b/ui/angular.json
@@ -9,16 +9,18 @@
       "projectType": "application",
       "architect": {
         "build": {
-          "builder": "@angular-builders/custom-webpack:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "customWebpackConfig": {
-              "path": "./extra-webpack.config.js"
+            "loader": {
+              ".ttf": "binary"
             },
             "outputPath": "dist",
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "browser": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "polyfills.ts"
+            ],
             "assets": [
               "src/assets",
               "src/favicon.ico",
@@ -123,8 +125,6 @@
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -135,31 +135,31 @@
           }
         },
         "serve": {
-          "builder": "@angular-builders/custom-webpack:dev-server",
+          "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "port": 8080,
-            "browserTarget": "ui-ng2:build",
+            "buildTarget": "ui-ng2:build",
             "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "test": {
-              "browserTarget": "ui-ng2:build:test"
+              "buildTarget": "ui-ng2:build:test"
             },
             "development": {
-              "browserTarget": "ui-ng2:build:development"
+              "buildTarget": "ui-ng2:build:development"
             },
             "production": {
-              "browserTarget": "ui-ng2:build:production"
+              "buildTarget": "ui-ng2:build:production"
             },
             "experimental": {
-              "browserTarget": "ui-ng2:experimental:development"
+              "buildTarget": "ui-ng2:build:development"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ui-ng2:build"
+            "buildTarget": "ui-ng2:build"
           }
         },
         "test": {
@@ -220,105 +220,6 @@
               "src/app/**/*.ts",
               "src/app/**/*.html"
             ]
-          }
-        },
-        "experimental": {
-          "builder": "@angular-devkit/build-angular:browser-esbuild",
-          "options": {
-            "outputPath": "dist",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "tsConfig": "src/tsconfig.app.json",
-            "polyfills": "polyfills.ts",
-            "assets": [
-              "src/assets",
-              "src/favicon.ico",
-              {
-                "glob": "**/*",
-                "input": "node_modules/@ant-design/icons-angular/src/inline-svg/",
-                "output": "/assets/"
-              },
-              {
-                "glob": "**/*",
-                "input": "node_modules/monaco-editor/min/vs",
-                "output": "/assets/vs/"
-              }
-            ],
-            "styles": [
-              {
-                "input": "src/ngzorro.dark.less",
-                "bundleName": "ngzorro.dark",
-                "inject": false
-              },
-              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
-              "node_modules/dragula/dist/dragula.css",
-              "node_modules/codemirror/lib/codemirror.css",
-              "node_modules/codemirror/addon/hint/show-hint.css",
-              "node_modules/codemirror/addon/lint/lint.css",
-              "node_modules/codemirror/theme/darcula.css",
-              "node_modules/font-awesome/css/font-awesome.css",
-              "node_modules/animate.css/animate.min.css",
-              "node_modules/prismjs/themes/prism-okaidia.css",
-              "node_modules/spinkit/spinkit.min.css",
-              "node_modules/ng-zorro-antd/code-editor/style/index.min.css",
-              "src/styles.scss"
-            ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.js",
-              "node_modules/codemirror/lib/codemirror.js",
-              "node_modules/codemirror/mode/shell/shell.js",
-              "node_modules/codemirror/addon/mode/simple.js",
-              "node_modules/codemirror/addon/lint/lint.js",
-              "node_modules/codemirror/addon/lint/javascript-lint.js",
-              "node_modules/codemirror/addon/lint/yaml-lint.js",
-              "node_modules/codemirror/mode/dockerfile/dockerfile.js",
-              "node_modules/codemirror/mode/perl/perl.js",
-              "node_modules/codemirror/mode/yaml/yaml.js",
-              "node_modules/codemirror/mode/htmlmixed/htmlmixed.js",
-              "node_modules/codemirror/mode/clike/clike.js",
-              "node_modules/codemirror/mode/css/css.js",
-              "node_modules/codemirror/mode/powershell/powershell.js",
-              "node_modules/codemirror/mode/python/python.js",
-              "node_modules/codemirror/addon/hint/show-hint.js",
-              "node_modules/codemirror/mode/javascript/javascript.js",
-              "node_modules/codemirror/mode/lua/lua.js",
-              "node_modules/codemirror/addon/edit/matchbrackets.js",
-              "node_modules/codemirror/addon/display/autorefresh.js",
-              "node_modules/codemirror/addon/display/placeholder.js",
-              "node_modules/js-yaml/dist/js-yaml.js",
-              "resources/cds-hint.js",
-              "node_modules/ansi_up/ansi_up.js",
-              "node_modules/prismjs/prism.js"
-            ],
-            "allowedCommonJsDependencies": [
-              "@icholy/duration",
-              "ansi_up",
-              "dagre-d3",
-              "diff",
-              "dragula",
-              "fast-json-patch",
-              "jsrsasign",
-              "js-yaml",
-              "jsonschema",
-              "moment",
-              "!../../../../../../../style-loader/dist/runtime/injectStylesIntoStyleTag.js",
-              "!../../../../../../../style-loader/dist/runtime/insertBySelector.js",
-              "!../../../../../../../style-loader/dist/runtime/styleTagTransform.js",
-              "!../../../../../../../style-loader/dist/runtime/setAttributesWithoutAttributes.js",
-              "!../../../../../../../style-loader/dist/runtime/styleDomAPI.js",
-              "!../../../../../../../style-loader/dist/runtime/insertStyleElement.js",
-              "raven-js",
-              "rfdc",
-              "sanitize-html",
-              "style-loader",
-              "zxcvbn"
-            ]
-          },
-          "configurations": {
-            "development": {
-              "sourceMap": true,
-              "optimization": false
-            }
           }
         }
       }
