--- a/ui/package.json
+++ b/ui/package.json
@@ -25,24 +25,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.12",
+    "@angular/animations": "17.3.12",
     "@angular/cdk": "16.2.12",
-    "@angular/common": "16.2.12",
-    "@angular/compiler": "16.2.12",
-    "@angular/core": "16.2.12",
-    "@angular/forms": "16.2.12",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/router": "16.2.12",
+    "@angular/common": "17.3.12",
+    "@angular/compiler": "17.3.12",
+    "@angular/core": "17.3.12",
+    "@angular/forms": "17.3.12",
+    "@angular/platform-browser": "17.3.12",
+    "@angular/platform-browser-dynamic": "17.3.12",
+    "@angular/router": "17.3.12",
     "@babel/runtime": "7.23.2",
     "@fontsource/lato": "5.0.18",
     "@icholy/duration": "5.0.0",
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
-    "@ngxs/devtools-plugin": "3.8.1",
-    "@ngxs/logger-plugin": "3.8.1",
-    "@ngxs/storage-plugin": "3.8.1",
-    "@ngxs/store": "3.8.1",
+    "@ngxs/devtools-plugin": "3.8.2",
+    "@ngxs/logger-plugin": "3.8.2",
+    "@ngxs/storage-plugin": "3.8.2",
+    "@ngxs/store": "3.8.2",
     "@swimlane/ngx-charts": "20.5.0",
     "@types/dagre-d3": "0.6.2",
     "@types/js-yaml": "3.12.2",
@@ -69,15 +69,14 @@
     "lodash-es": "4.17.21",
     "modernizr": "3.12.0",
     "moment": "2.29.4",
-    "monaco-editor": "0.44.0",
-    "monaco-editor-webpack-plugin": "7.1.0",
+    "monaco-editor": "0.52.2",
     "ng-event-source": "1.0.14",
-    "ng-zorro-antd": "16.2.2",
+    "ng-zorro-antd": "17.4.1",
     "ng2-completer": "2.0.8",
-    "ng2-dragula": "5.0.1",
+    "ng2-dragula": "5.1.0",
     "ngx-clipboard": "16.0.0",
-    "ngx-infinite-scroll": "16.0.0",
-    "ngx-markdown": "16.0.0",
+    "ngx-infinite-scroll": "17.0.1",
+    "ngx-markdown": "17.2.1",
     "ngx-moment": "6.0.2",
     "postcss": "8.4.31",
     "prismjs": "1.28.0",
@@ -90,22 +89,23 @@
     "ts-helpers": "1.1.2",
     "tslib": "2.3.0",
     "url": "0.11.0",
-    "zone.js": "0.13.3",
+    "zone.js": "0.14.10",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "16.0.1",
-    "@angular-devkit/build-angular": "16.2.16",
-    "@angular-eslint/builder": "16.3.1",
-    "@angular-eslint/eslint-plugin": "16.3.1",
-    "@angular-eslint/eslint-plugin-template": "16.3.1",
-    "@angular-eslint/schematics": "16.3.1",
-    "@angular-eslint/template-parser": "16.3.1",
-    "@angular/cli": "16.2.10",
-    "@angular/compiler-cli": "16.2.12",
+    "@angular-builders/custom-webpack": "17.0.2",
+    "@angular-devkit/build-angular": "17.3.11",
+    "@angular-eslint/builder": "17.5.1",
+    "@angular-eslint/eslint-plugin": "17.5.1",
+    "@angular-eslint/eslint-plugin-template": "17.5.1",
+    "@angular-eslint/schematics": "17.5.1",
+    "@angular-eslint/template-parser": "17.5.1",
+    "@angular/cli": "17.3.11",
+    "@angular/compiler-cli": "17.3.12",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "13.2.0",
     "@compodoc/compodoc": "1.1.25",
+    "@ctrl/tinycolor": "4.1.0",
     "@sentry/cli": "1.37.4",
     "@types/codemirror": "0.0.81",
     "@types/d3": "5.9.2",
@@ -115,12 +115,12 @@
     "@types/lodash-es": "4.17.3",
     "@types/node": "18.18.10",
     "@types/sanitize-html": "2.9.5",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "7.2.0",
+    "@typescript-eslint/parser": "7.2.0",
     "@typescript-eslint/typescript-estree": "5.17.0",
     "codelyzer": "6.0.0",
     "copy-webpack-plugin": "9.0.0",
-    "eslint": "8.53.0",
+    "eslint": "8.57.0",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsdoc": "46.9.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
@@ -134,10 +134,10 @@
     "karma-jasmine-html-reporter": "1.5.0",
     "karma-junit-reporter": "1.2.0",
     "lint-staged": "12.0.2",
-    "ng-packagr": "16.2.3",
+    "ng-packagr": "17.3.0",
     "style-loader": "3.3.3",
     "ts-node": "8.3.0",
-    "typescript": "4.9.5",
+    "typescript": "5.4.5",
     "url": "0.11.0",
     "webdriver-manager": "12.1.7",
     "webpack-bundle-analyzer": "4.6.1",
