refactor(tests): split it

--- a/tests/08_v2_workflow_artifactory_plugins_python_release.yml
+++ b/tests/08_v2_workflow_artifactory_plugins_python_release.yml
@@ -1,8 +1,8 @@
-name: Python / Debian / Helm push
+name: Artifactory Python Release
 vars:
-  cds_project: "ITV2ARTIFACTORYPLUGINS"
-  cds_workflow: "WorkflowA"
-  git_repo: "it_v2_rt_plugins"
+  cds_project: "ITV2ARTIFACTORYPLUGINSPYTHON"
+  cds_workflow: "WorkflowPython"
+  git_repo: "it_v2_rt_plugins_python"
   worker_model: "{{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian"
   rt_url: "rt_url"
   rt_token: "rt_token"
@@ -133,27 +133,6 @@ testcases:
           package_dir={\"\":\"quicksample/src\"},
           install_requires=[]
         )
-      chart/Chart.yaml:
-        apiVersion: v2
-        name: mychart
-        description: A Helm chart for Kubernetes
-        type: application
-        version: "0.1.0"
-        appVersion: "1.16.0"
-      chart/templates/deployment.yaml:
-        apiVersion: apps/v1
-        kind: Deployment
-        metadata:
-          name: coucou
-        spec:
-          selector:
-            matchLabels:
-              helm.sh/chart: toto
-      chart/values.yaml:
-        replicaCount: 1
-        image:
-          repository: nginx
-          pullPolicy: IfNotPresent
   - type: v2_push_cds_files_on_repo
     git_repo: "{{.git_repo}}"
     git_host: "{{.git.host}}"
@@ -169,61 +148,16 @@ testcases:
         type: docker
         spec:
           image: buildpack-deps:buster
-      workflows/workflowA.yaml:
+      workflows/python.yaml:
         name: {{.cds_workflow}}
         on: [push]
         integrations: [artifactory-{{.rt_project}}]
         jobs:
-          pluginCache:
-            runs-on: "{{.worker_model}}"
-            steps:
-              - id: generateKey
-                run: worker export ts $(date +%s)
-              - id: cacheGet
-                uses: actions/cache
-                with:
-                  key: ${{ steps.generateKey.outputs.ts }}
-                  path: myfile
-              - id: cacheCheck
-                run: echo ${{ steps.cacheGet.outputs.cache-hit }}    
-              - run: date > myfile
-            outputs:
-              cacheKey:
-                value: ${{ steps.generateKey.outputs.ts }}
-          getCache:
-            runs-on: "{{.worker_model}}"
-            needs: [pluginCache]
-            steps:
-              - uses: actions/cacheRestore
-                id: restore
-                with:
-                  key: ${{ jobs.pluginCache.outputs.cacheKey }}
-                  path: myfile 
-              - id: checkHit
-                run: echo ${{ steps.restore.outputs.cache-hit }} 
           ctx:
             runs-on: "{{.worker_model}}"
             steps:
               - id: ctxstep
                 run: echo "${{ integrations.artifact_manager.config.build.info.prefix }}"
-          Debian-Job:
-            runs-on: "{{.worker_model}}"
-            steps:
-              - uses: actions/checkout
-              - run: apt-get update -y && apt-get install -y python3-pip python3-stdeb fakeroot python3-setuptools
-              - run: |
-                  pip3 install stem stdeb
-                  pkgVersion=0.0.$(date +%s)
-                  sed -i "s/0.0.1/${pkgVersion}/g" setup.py
-              - run: python3 setup.py --command-packages=stdeb.command bdist_deb
-              - uses: actions/debianPush
-                with:
-                  files: deb_dist/*.deb
-          Helm-Job:
-            runs-on: "{{.worker_model}}"
-            steps:
-              - uses: actions/checkout
-              - uses: actions/helmPush
           Python-Job:
             runs-on: "{{.worker_model}}"
             steps:
@@ -240,8 +174,8 @@ testcases:
                   package: quicksample
                   version: ${{ steps.packagePython.outputs.pkgVersion }}
                   wheel: "true"
-          PromoteAndRelease:
-            needs: [Debian-Job, Python-Job, Helm-Job, PushFiles]
+          Release:
+            needs: [Python-Job]
             runs-on: "{{.worker_model}}"
             steps:
               - uses: actions/artifactoryPromote
@@ -249,38 +183,7 @@ testcases:
                   artifacts: python:* helm:* debian:* terraformProvider:*
               - uses: actions/artifactoryRelease
                 with:
-                  artifacts: python:* helm:* debian:* terraformProvider:*
-          PushFiles:
-            runs-on: "{{.worker_model}}"     
-            steps:
-            - id: name
-              run: | 
-                debfile=package-linux-amd64-$(date +%s).deb
-                worker export DEBNAME ${debfile}
-                terrafile=terraform-linux-amd64-$(date +%s).tar.gz
-                worker export TERRANAME ${terrafile}
-                pyfile=package-$(date +%s).py
-                worker export PYTHONNAME ${pyfile}
-                touch ${debfile} && touch ${terrafile} && touch ${pyfile}
-                ls -l
-            - id: uploadDeb
-              run: curl --fail -X PUT -T ${{ steps.name.outputs.DEBNAME }} -u "${CDS_INTEGRATION_ARTIFACT_MANAGER_TOKEN_NAME}:${CDS_INTEGRATION_ARTIFACT_MANAGER_TOKEN}" "${CDS_INTEGRATION_ARTIFACT_MANAGER_URL}{{.rt_project}}-{{.rt_component}}-debian/pool/${{ steps.name.outputs.DEBNAME }};deb.distribution=focal;deb.component=main;deb.architecture=amd64"  
-            - uses: actions/addRunResult
-              with:
-                path: pool/${{ steps.name.outputs.DEBNAME }}
-                type: debian
-            - id: uploadTerraform
-              run: curl --fail -X PUT -T ${{ steps.name.outputs.TERRANAME }} -u "${CDS_INTEGRATION_ARTIFACT_MANAGER_TOKEN_NAME}:${CDS_INTEGRATION_ARTIFACT_MANAGER_TOKEN}" "${CDS_INTEGRATION_ARTIFACT_MANAGER_URL}{{.rt_project}}-{{.rt_component}}-terraformProvider/${{ steps.name.outputs.TERRANAME }};terraform.name=myprovider;terraform.namespace=ovh;terraform.version=0.0.1;terraform.flavor=linux-amd64;terraform.type=provider"    
-            - uses: actions/addRunResult
-              with:
-                path: ${{ steps.name.outputs.TERRANAME }}
-                type: terraformProvider
-            - id: uploadPython
-              run: curl --fail -X PUT -T ${{steps.name.outputs.PYTHONNAME}} -u "${CDS_INTEGRATION_ARTIFACT_MANAGER_TOKEN_NAME}:${CDS_INTEGRATION_ARTIFACT_MANAGER_TOKEN}" "${CDS_INTEGRATION_ARTIFACT_MANAGER_URL}{{.rt_project}}-{{.rt_component}}-pypi/${{steps.name.outputs.PYTHONNAME}};pypi.version=0.0.2"
-            - uses: actions/addRunResult
-              with:
-                path: ${{steps.name.outputs.PYTHONNAME}}
-                type: python  
+                  artifacts: python:*
   - name: Check CDS project analyses
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
     assertions:
@@ -322,7 +225,7 @@ testcases:
         - or:
           - result.systemoutjson.systemoutjson0.status ShouldEqual Success
           - result.systemoutjson.systemoutjson0.status ShouldEqual Fail
-    retry: 400
+    retry: 300
     delay: 1
     vars:
       workflowRunID:
@@ -350,35 +253,13 @@ testcases:
     assertions:
     - result.systemout ShouldEqual Success
 
-  - name: Check that we have 3 run results of type python
+  - name: Check that we have 2 run results of type python
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=python --format json"  
     assertions:
-      - result.systemoutjson ShouldHaveLength 3
-  - name: Check that we have 2 run result of type debian
-    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=debian --format json"  
-    assertions:
-      - result.systemoutjson ShouldHaveLength 2
-  - name: Check that we have 1 run result of type terraformProvider
-    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=terraformProvider --format json"  
-    assertions:
-      - result.systemoutjson ShouldHaveLength 1      
-  - name: Check that we have 1 run result of type helm
-    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=helm --format json"  
-    assertions:
-      - result.systemoutjson ShouldHaveLength 1
+      - result.systemoutjson ShouldHaveLength 2    
   - name: Check that we have 1 run result of type release
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=release --format json"  
     assertions:
       - result.systemoutjson ShouldHaveLength 1    
   - name: Check integration context
-    script: "cat {{.cds_workflow}}-1-1-ctx-ctxstep && cat {{.cds_workflow}}-1-1-ctx-ctxstep | grep \"{{.rt_project}}/{{.rt_component}}\""  
-
-  - name: Check pluginCache log - cacheCheck
-    script: "cat {{.cds_workflow}}-1-1-pluginCache-cacheCheck && cat {{.cds_workflow}}-1-1-pluginCache-cacheCheck | grep \"false\""
-  - name: Check pluginCache log - cacheCheck
-    script: "cat {{.cds_workflow}}-1-1-pluginCache-Post-cacheGet | grep \"Cache uploaded\""
-
-  - name: Check pluginCache log - cache restore
-    script: "cat {{.cds_workflow}}-1-1-getCache-restore | grep \"Cache was downloaded\""  
-  - name: Check pluginCache log - retore-hit
-    script: "cat {{.cds_workflow}}-1-1-getCache-checkHit | grep \"true\""
+    script: "cat {{.cds_workflow}}-1-1-ctx-ctxstep && cat {{.cds_workflow}}-1-1-ctx-ctxstep | grep \"{{.rt_project}}/{{.rt_component}}\""
