--- a/tests/08_v2_workflow_artifactory_plugins_helm.yml
+++ b/tests/08_v2_workflow_artifactory_plugins_helm.yml
@@ -150,7 +150,7 @@ testcases:
         type: docker
         spec:
           image: buildpack-deps:buster
-      workflows/workflowA.yaml:
+      workflows/workflowHelm.yaml:
         name: {{.cds_workflow}}
         on: [push]
         integrations: [artifactory-{{.rt_project}}]
@@ -194,7 +194,7 @@ testcases:
     delay: 1
 
   - name: Check that the CDS workflow has at least one execution and is Success
-    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} WorkflowA --format json"
+    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
     assertions:
       - and: 
         - result.systemoutjson ShouldHaveLength 1
